# Armadillos

./: Cargo.toml  GEMINI.md  README.md  ROADMAP.md  armadillos.db  armadillos.db-wal
assets/css/: style.css
docs/: core_concepts.md  index.md  project_roadmap.md  routing_and_handlers.md  templating_with_maud.md  tursodb.md  workflow.md
src/: main.rs  security.rs
src/assets/: mod.rs
src/assets/layouts/: MainLayout.rs
src/assets/views/: Main.rs  mod.rs
src/components/: Header.rs  NavBar.rs  footer.rs  header.rs  mod.rs  nav_bar.rs
src/domain/: types.rs
src/layouts/: MainLayout.rs  main_layout.rs
src/pages/: About.rs  Main.rs  about.rs  index.rs  mod.rs  soldiers.rs
